# trade

./: .env.example  .gitignore  .gitmessage  BATCH_SCHEDULE_OPTIMIZATION.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  start_all.sh  stop_all.sh  system_check.md
_docs/: ACCOUNTS_AND_ACCESS.md
_infra/: docker-compose.base.yml  test_exchange_table_comparison.sql
_platform/: README.md  pom_versions.xml  requirements.txt
api-gateway/: Dockerfile  package.json
common/: README.md
deploy/: README.md
docs/: INFRASTRUCTURE.md
infra/: README.md
libs/common-rs/: Cargo.toml
libs/common-rs/benches/: calculations.rs
libs/common-rs/src/: lib.rs
libs/common-rs/src/api/: handlers.rs  mod.rs  routes.rs
libs/common-rs/src/config/: mod.rs
libs/common-rs/src/models/: mod.rs
libs/common-rs/src/services/: calculations.rs  market_data.rs  mod.rs
libs/common-rs/src/utils/: mod.rs
scripts/: build-all.sh  deploy-prod.sh  dev-down.sh  dev-up.sh  start_all.sh  stop_all.sh  test-all.sh
trade-common/: README.md  setup.py
trade_batch/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.old  README.md  docker-compose-full.yml  docker-compose-ib-gateway.yml  docker-compose.yml  pom.xml  requirements.docker.txt  requirements.txt
trade_batch_java/: README.md  pom.xml
trade_dashboard/: .env.example  .gitignore  API_ENDPOINTS.md  CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  docker-compose-guide.md  docker-compose.yml  requirements.txt  test_connections.py  test_ib_connection.py  test_ib_connection_3min.py  test_ib_gateway.py  (+2 more)
(+302 files in other folders)
